@@ -25,3 +25,4 @@ ManagedMakeBuilder.comment.build.rule = Each subdirectory must supply rules for 
 ManagedMakeBuilder.comment.module.make.includes = Include the makefiles for each source subdirectory
 ManagedMakeBuilder.comment.module.dep.includes = Include automatically-generated dependency list:
 ManagedMakeBuilder.comment.autodeps = Automatically-generated dependency list:
+ManagedMakeBuilder.comment.header = Automatically-generated file. Do not edit!
